--- a/EEG Detection.ipynb
+++ b/EEG Detection.ipynb
@@ -102,123 +102,116 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1004</th>\n",
-       "      <td>-12</td>\n",
-       "      <td>36</td>\n",
-       "      <td>67</td>\n",
-       "      <td>92</td>\n",
-       "      <td>130</td>\n",
-       "      <td>145</td>\n",
-       "      <td>125</td>\n",
-       "      <td>90</td>\n",
-       "      <td>66</td>\n",
-       "      <td>32</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <th>5883</th>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
        "      <td>13</td>\n",
-       "      <td>18</td>\n",
-       "      <td>37</td>\n",
-       "      <td>59</td>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6901</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-20</td>\n",
-       "      <td>-8</td>\n",
-       "      <td>-14</td>\n",
-       "      <td>-13</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
        "      <td>-3</td>\n",
-       "      <td>-25</td>\n",
-       "      <td>-8</td>\n",
-       "      <td>-15</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-11</td>\n",
-       "      <td>-7</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-7</td>\n",
-       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5492</th>\n",
+       "      <th>4135</th>\n",
+       "      <td>-3</td>\n",
+       "      <td>-11</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>-10</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5412</th>\n",
+       "      <td>5</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>-3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5754</th>\n",
+       "      <td>-4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6161</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
        "      <td>11</td>\n",
        "      <td>-9</td>\n",
        "      <td>5</td>\n",
-       "      <td>-2</td>\n",
        "      <td>12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-8</td>\n",
-       "      <td>16</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-5</td>\n",
        "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1847</th>\n",
-       "      <td>-67</td>\n",
-       "      <td>-61</td>\n",
-       "      <td>-69</td>\n",
-       "      <td>-85</td>\n",
-       "      <td>-95</td>\n",
-       "      <td>-104</td>\n",
-       "      <td>-106</td>\n",
-       "      <td>-89</td>\n",
-       "      <td>-77</td>\n",
-       "      <td>-67</td>\n",
-       "      <td>-67</td>\n",
-       "      <td>-70</td>\n",
-       "      <td>-85</td>\n",
-       "      <td>-99</td>\n",
-       "      <td>-105</td>\n",
-       "      <td>-105</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3400</th>\n",
-       "      <td>-9</td>\n",
-       "      <td>-7</td>\n",
-       "      <td>-23</td>\n",
-       "      <td>36</td>\n",
-       "      <td>7</td>\n",
-       "      <td>-18</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>12</td>\n",
-       "      <td>-9</td>\n",
-       "      <td>-8</td>\n",
-       "      <td>-40</td>\n",
-       "      <td>49</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-17</td>\n",
-       "      <td>-9</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      X1  X2  X3  X4   X5   X6   X7  X8  X9  X10  X11  X12  X13  X14  X15  \\\n",
-       "1004 -12  36  67  92  130  145  125  90  66   32    3    1   13   18   37   \n",
-       "6901   1 -20  -8 -14  -13   -1   -3 -25  -8  -15   -2   -1  -11   -7   -1   \n",
-       "5492  11  -9   5  -2   12    2   -1  -8  16   -2    1    3    8    9    0   \n",
-       "1847 -67 -61 -69 -85  -95 -104 -106 -89 -77  -67  -67  -70  -85  -99 -105   \n",
-       "3400  -9  -7 -23  36    7  -18   -4  12  -9   -8  -40   49    1  -17   -9   \n",
-       "\n",
-       "      X16  y  \n",
-       "1004   59  0  \n",
-       "6901   -7  3  \n",
-       "5492    1  2  \n",
-       "1847 -105  0  \n",
-       "3400   18  1  "
+       "      X1  X2  X3  X4  X5  X6  X7  X8  X9  X10  X11  X12  X13  X14  X15  X16  y\n",
+       "5883  10  16   2   7  11  10  13   0   2    5    0   10    8   -3    5    6  2\n",
+       "4135  -3 -11  -4  -5  -5  -6  -8  -4  -5   -8   -4   -5  -10   -7   -3   -2  2\n",
+       "5412   5  -6   0   1  -5   8   0  -4  -3    1    1    0   -4    9   -5   -1  2\n",
+       "5754  -4   0   8   2   7 -12   4   6  -4    4   -4    2  -14   12    0   -1  2\n",
+       "6161   2   2   3   0   2  -1   2   3   4   12   11   -9    5   12    6   -5  3"
       ]
      },
      "execution_count": 3,
@@ -735,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "80344382-9617-4684-8c83-757d44987582",
    "metadata": {},
    "outputs": [],
@@ -1142,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "214e63b9-c076-4dfd-9ee5-9c6be93c0ecd",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "50d694ee",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1284,7 @@
        "[8000 rows x 4 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "96c778bb-06a5-43f6-ab89-b639d59a12d7",
    "metadata": {},
    "outputs": [],
@@ -1331,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "95c1b9db-03e4-4d3b-9518-dbf37eaa4e36",
    "metadata": {},
    "outputs": [],
@@ -1345,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "22e6fc7e-b421-493f-ba94-e8eab245afec",
    "metadata": {},
    "outputs": [],
@@ -1359,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "0980e2ef",
    "metadata": {},
    "outputs": [],
@@ -1372,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "79d13a5b-100f-496b-966b-80a7018863d0",
    "metadata": {},
    "outputs": [],
@@ -1386,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "46abdde7-0dbe-4ade-bfc2-c9aa48705100",
    "metadata": {},
    "outputs": [],
@@ -1400,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "fb3b04dd-24f7-49a1-8f25-1e5ec384d55a",
    "metadata": {},
    "outputs": [],
@@ -1434,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "id": "650fa002",
    "metadata": {},
    "outputs": [],
@@ -1444,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "b57e1a82-3dda-4a5b-8e52-6108e946c28c",
    "metadata": {},
    "outputs": [
@@ -1485,6 +1478,39 @@
       " [ 40 232  93  14]\n",
       " [ 12 121 219  45]\n",
       " [ 27 165 166  41]]\n",
+      "\n",
+      "SVM Classifier\n",
+      "Training Accuracy of the model : 0.75\n",
+      "\n",
+      "Test Accuracy of the model : 0.75\n",
+      "\n",
+      "Confusion Matrix of Test Data : \n",
+      "[[418   3   0   4]\n",
+      " [  0 275  84  20]\n",
+      " [  0   6 375  16]\n",
+      " [  0  38 222 139]]\n",
+      "\n",
+      "Gaussian Naive Bayes Classifier\n",
+      "Training Accuracy of the model : 0.68\n",
+      "\n",
+      "Test Accuracy of the model : 0.69\n",
+      "\n",
+      "Confusion Matrix of Test Data : \n",
+      "[[424   1   0   0]\n",
+      " [  0 218  74  87]\n",
+      " [  0  18 345  34]\n",
+      " [  1  69 218 111]]\n",
+      "\n",
+      "KNN Classifier\n",
+      "Training Accuracy of the model : 0.99\n",
+      "\n",
+      "Test Accuracy of the model : 0.98\n",
+      "\n",
+      "Confusion Matrix of Test Data : \n",
+      "[[422   0   0   3]\n",
+      " [  0 364   8   7]\n",
+      " [  0   2 382  13]\n",
+      " [  0   0   4 395]]\n",
       "\n"
      ]
     }
@@ -1545,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "01fb01d3-f197-41d0-bb24-1275c5bc68f4",
    "metadata": {},
    "outputs": [],
@@ -1555,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "ed9cde7f-2110-4dad-9fdd-9b15f62fc831",
    "metadata": {},
    "outputs": [],
@@ -1565,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "3c0b982f-a6b7-4b5e-9f4d-b748cad3a3f7",
    "metadata": {},
    "outputs": [
@@ -2337,7 +2363,7 @@
        "MLPClassifier(hidden_layer_sizes=(16, 32, 32, 16, 4), max_iter=500)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2348,7 +2374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "0650341c-6088-43e8-9529-ee0e487799cc",
    "metadata": {},
    "outputs": [],
@@ -2359,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "42a44fd1-d2f7-4c2e-aebd-c40b53e964cd",
    "metadata": {},
    "outputs": [
@@ -2369,7 +2395,7 @@
        "array([0, 2, 2, ..., 0, 3, 3], shape=(6400,))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2380,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "c2f03db6-a01f-47f1-82b8-54113e536422",
    "metadata": {},
    "outputs": [
@@ -2389,9 +2415,9 @@
      "output_type": "stream",
      "text": [
       "MLP Classifier\n",
-      "Training Accuracy of the model : 0.99\n",
+      "Training Accuracy of the model : 0.98\n",
       "\n",
-      "Test Accuracy of the model : 0.94\n",
+      "Test Accuracy of the model : 0.93\n",
       "\n"
      ]
     }
@@ -2406,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "3dc53799-0955-464f-a38a-dc2b5735abc6",
    "metadata": {},
    "outputs": [
@@ -2415,10 +2441,10 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix of Test Data : \n",
-      "[[421   4   0   0]\n",
-      " [  1 348  13  17]\n",
-      " [  0   8 373  16]\n",
-      " [  1  11  29 358]]\n",
+      "[[420   3   1   1]\n",
+      " [  0 356  11  12]\n",
+      " [  0  13 351  33]\n",
+      " [  2   9  26 362]]\n",
       "\n"
      ]
     }
@@ -2429,8 +2455,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "69c40921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ba02ce86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_mlp, X_test_mlp, y_train_mlp, y_test_mlp= train_test_split(X_scaled, y, test_size=.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "afa33a16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.941875\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[421   1   0   3]\n",
+      " [  3 352  10  14]\n",
+      " [  0   7 373  17]\n",
+      " [  0  10  28 361]]\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.99      0.99       425\n",
+      "           1       0.95      0.93      0.94       379\n",
+      "           2       0.91      0.94      0.92       397\n",
+      "           3       0.91      0.90      0.91       399\n",
+      "\n",
+      "    accuracy                           0.94      1600\n",
+      "   macro avg       0.94      0.94      0.94      1600\n",
+      "weighted avg       0.94      0.94      0.94      1600\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "mlp = MLPClassifier(\n",
+    "    hidden_layer_sizes=(16, 32, 32, 16, 4),\n",
+    "    max_iter=500,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Train the model\n",
+    "mlp.fit(X_train_mlp, y_train_mlp)\n",
+    "\n",
+    "# Predict on test data\n",
+    "y_pred_mlp = mlp.predict(X_test_mlp)\n",
+    "\n",
+    "\n",
+    "print(\"Test Accuracy:\", accuracy_score(y_test_mlp, y_pred_mlp))\n",
+    "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test_mlp, y_pred_mlp))\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test_mlp, y_pred_mlp))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b29ca258",
+   "id": "23a6fe62",
    "metadata": {},
    "outputs": [],
    "source": []
