KNN model updated and DTC Best parameters Evaluation

--- a/EEG Detection.ipynb
+++ b/EEG Detection.ipynb
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 66,
    "id": "fb3b04dd-24f7-49a1-8f25-1e5ec384d55a",
    "metadata": {},
    "outputs": [],
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "id": "b57e1a82-3dda-4a5b-8e52-6108e946c28c",
    "metadata": {},
    "outputs": [
@@ -1505,15 +1505,15 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression\n",
-      "Training Accuracy of the model : 0.48\n",
+      "Training Accuracy of the model : 0.24\n",
       "\n",
-      "Test Accuracy of the model : 0.46\n",
+      "Test Accuracy of the model : 0.25\n",
       "\n",
       "Confusion Matrix of Test Data : \n",
-      "[[204  47  89  85]\n",
-      " [ 12 222  84  61]\n",
-      " [ 18  74 162 143]\n",
-      " [ 22 123 106 148]]\n",
+      "[[ 51 116 118 115]\n",
+      " [ 72 121  95 112]\n",
+      " [ 60 112 121 107]\n",
+      " [ 73 117 107 103]]\n",
       "\n",
       "Logistic Regression\n",
       "Training Accuracy of the model : 0.46\n",
@@ -1527,37 +1527,37 @@
       " [ 27 165 166  41]]\n",
       "\n",
       "SVM Classifier\n",
-      "Training Accuracy of the model : 0.75\n",
+      "Training Accuracy of the model : 0.25\n",
       "\n",
-      "Test Accuracy of the model : 0.75\n",
+      "Test Accuracy of the model : 0.24\n",
       "\n",
       "Confusion Matrix of Test Data : \n",
-      "[[418   3   0   4]\n",
-      " [  0 275  84  20]\n",
-      " [  0   6 375  16]\n",
-      " [  0  38 222 139]]\n",
+      "[[ 99  72 187  42]\n",
+      " [120  78 162  40]\n",
+      " [ 88  94 166  52]\n",
+      " [111  78 166  45]]\n",
       "\n",
       "Gaussian Naive Bayes Classifier\n",
-      "Training Accuracy of the model : 0.68\n",
+      "Training Accuracy of the model : 0.25\n",
       "\n",
-      "Test Accuracy of the model : 0.69\n",
+      "Test Accuracy of the model : 0.25\n",
       "\n",
       "Confusion Matrix of Test Data : \n",
-      "[[424   1   0   0]\n",
-      " [  0 218  74  87]\n",
-      " [  0  18 345  34]\n",
-      " [  1  69 218 111]]\n",
+      "[[ 99  65 173  63]\n",
+      " [120  84 157  39]\n",
+      " [ 94  83 155  68]\n",
+      " [112  74 152  62]]\n",
       "\n",
       "KNN Classifier\n",
-      "Training Accuracy of the model : 0.99\n",
+      "Training Accuracy of the model : 0.98\n",
       "\n",
-      "Test Accuracy of the model : 0.98\n",
+      "Test Accuracy of the model : 0.97\n",
       "\n",
       "Confusion Matrix of Test Data : \n",
-      "[[422   0   0   3]\n",
-      " [  0 364   8   7]\n",
-      " [  0   2 382  13]\n",
-      " [  0   0   4 395]]\n",
+      "[[392   4   0   4]\n",
+      " [  0 380  11   9]\n",
+      " [  0   2 386  12]\n",
+      " [  0   0   4 396]]\n",
       "\n"
      ]
     }
@@ -1782,6 +1782,109 @@
     "# Classification Report\n",
     "print(\"Classification Report:\")\n",
     "print(classification_report(y_test, dt_pred_test_dt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "e2e821fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters: {'criterion': 'entropy', 'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 2}\n",
+      "Best CV score: 0.8684375\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "params = {\n",
+    "    \"max_depth\": [8, 10, 12, 14, 16, None],\n",
+    "    \"min_samples_split\": [2, 5, 10],\n",
+    "    \"min_samples_leaf\": [1, 2, 4],\n",
+    "    \"criterion\": [\"gini\", \"entropy\"]\n",
+    "}\n",
+    "\n",
+    "grid = GridSearchCV(\n",
+    "    DecisionTreeClassifier(random_state=42),\n",
+    "    params,\n",
+    "    cv=5,\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "\n",
+    "grid.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best parameters:\", grid.best_params_)\n",
+    "print(\"Best CV score:\", grid.best_score_)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f2e8529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#KNN Classifier with Standard Scaling\n",
+    "knn = KNeighborsClassifier(n_neighbors=5, metric='minkowski', p=2)\n",
+    "knn.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Predict\n",
+    "y_pred = knn.predict(X_test_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "0c1e13b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNN Classifier\n",
+      "Training Accuracy : 0.9822\n",
+      "Testing Accuracy  : 0.9706\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[389   5   0   6]\n",
+      " [  0 380  11   9]\n",
+      " [  0   2 388  10]\n",
+      " [  0   0   4 396]]\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.97      0.99       400\n",
+      "           1       0.98      0.95      0.97       400\n",
+      "           2       0.96      0.97      0.97       400\n",
+      "           3       0.94      0.99      0.96       400\n",
+      "\n",
+      "    accuracy                           0.97      1600\n",
+      "   macro avg       0.97      0.97      0.97      1600\n",
+      "weighted avg       0.97      0.97      0.97      1600\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluation\n",
+    "print(\"KNN Classifier\")\n",
+    "print(\"Training Accuracy :\", round(knn.score(X_train_scaled, y_train), 4))\n",
+    "print(\"Testing Accuracy  :\", round(accuracy_score(y_test, y_pred), 4))\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(cm)\n",
+    "\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, y_pred))"
    ]
   },
   {
