some changes in DT

--- a/EEG Detection.ipynb
+++ b/EEG Detection.ipynb
@@ -1682,7 +1682,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
+   "id": "379f59cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.09062553, -0.02380204,  0.06436787, ...,  0.05537383,\n",
+       "         0.20476719,  0.19695055],\n",
+       "       [-0.15152461, -0.07895521,  0.00856262, ...,  0.13833088,\n",
+       "        -0.07417749,  0.25310682],\n",
+       "       [-0.17843018, -0.02380204,  0.17597837, ..., -0.02758322,\n",
+       "         0.09318932,  0.02848176],\n",
+       "       ...,\n",
+       "       [ 0.35968124,  0.36227014, -0.04724263, ...,  0.30424497,\n",
+       "        -0.26943877, -0.08383078],\n",
+       "       [ 0.06371996,  0.11408088,  0.06436787, ...,  0.13833088,\n",
+       "         0.17687272,  0.30926309],\n",
+       "       [-0.23224132,  0.27954039,  0.09227049, ...,  0.08302618,\n",
+       "         0.12108378,  0.25310682]], shape=(6400, 16))"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "id": "9c4bb341",
    "metadata": {},
    "outputs": [],
@@ -1701,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 104,
    "id": "171b6dc5",
    "metadata": {},
    "outputs": [],
@@ -1721,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 105,
    "id": "905af458",
    "metadata": {},
    "outputs": [],
@@ -1736,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 106,
    "id": "931e1e59",
    "metadata": {},
    "outputs": [
@@ -1777,16 +1808,16 @@
     "\n",
     "# Confusion Matrix\n",
     "print(\"Confusion Matrix:\")\n",
-    "print(confusion_matrix(y_test, dt_pred_test_dt), \"\\n\")\n",
+    "print(confusion_matrix(y_test_dt, dt_pred_test_dt), \"\\n\")\n",
     "\n",
     "# Classification Report\n",
     "print(\"Classification Report:\")\n",
-    "print(classification_report(y_test, dt_pred_test_dt))"
+    "print(classification_report(y_test_dt, dt_pred_test_dt))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 107,
    "id": "e2e821fb",
    "metadata": {},
    "outputs": [
@@ -1795,7 +1826,7 @@
      "output_type": "stream",
      "text": [
       "Best parameters: {'criterion': 'entropy', 'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 2}\n",
-      "Best CV score: 0.8684375\n"
+      "Best CV score: 0.86796875\n"
      ]
     }
    ],
@@ -1816,7 +1847,7 @@
     "    n_jobs=-1\n",
     ")\n",
     "\n",
-    "grid.fit(X_train, y_train)\n",
+    "grid.fit(X_train_dt, y_train_dt)\n",
     "\n",
     "print(\"Best parameters:\", grid.best_params_)\n",
     "print(\"Best CV score:\", grid.best_score_)\n"
